[gd_scene load_steps=4 format=2]

[ext_resource path="res://HSliders.gd" type="Script" id=1]
[ext_resource path="res://mixkit-select-click-1109.wav" type="AudioStream" id=2]
[ext_resource path="res://mixkit-pop-07-699.mp3" type="AudioStream" id=3]

[node name="HSliders" type="Node"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 32.0
margin_right = 282.0
margin_bottom = 599.0
custom_constants/separation = 167
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolume" type="HSlider" parent="VBoxContainer"]
margin_right = 282.0
margin_bottom = 16.0
max_value = 1.0
step = 0.001
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FXVolume" type="HSlider" parent="VBoxContainer"]
margin_top = 183.0
margin_right = 282.0
margin_bottom = 199.0
max_value = 1.0
step = 0.001
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true
bus = "music"

[node name="TestFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "FX"

[node name="TestFXButton" type="Button" parent="."]
margin_left = 10.0
margin_top = 290.0
margin_right = 175.0
margin_bottom = 351.0
text = "TEST FX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 184.0
margin_top = 290.0
margin_right = 363.0
margin_bottom = 351.0
text = "Go to testing scene"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="VBoxContainer/MusicVolume" to="." method="_on_Music_Volume_value_changed"]
[connection signal="value_changed" from="VBoxContainer/FXVolume" to="." method="_on_FX_Volume_value_changed"]
[connection signal="pressed" from="TestFXButton" to="." method="_on_TestFXButton_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
